--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- ////////////////////////////////    link     //////////////////////////////// -->
+    <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Quicksand" rel="stylesheet">
+    <!-- ////////////////////////////////    script     //////////////////////////////// -->
     <title>mc_hackathon-2018</title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
