--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!-- ////////////////////////////////    link     //////////////////////////////// -->
+    <!-- ```````````````````````````````    link     ``````````````````````````````` -->
     <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Quicksand" rel="stylesheet">
-    <!-- ////////////////////////////////    script     //////////////////////////////// -->
+    <!-- ```````````````````````````````    script    ``````````````````````````````` -->
+
     <title>mc_hackathon-2018</title>
-  </head>
-  <body>
+</head>
+<body>
     <div id="app"></div>
-  </body>
+
+</body>
 </html>
