--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!-- ```````````````````````````````    link     ``````````````````````````````` -->
     <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Quicksand" rel="stylesheet">
     <!-- ```````````````````````````````    script    ``````````````````````````````` -->
-
-    <title>mc_hackathon-2018</title>
+    <link rel="icon" type="image/png" href="./static/meichu.png"/ sizes="32x32">
+    <title>2018梅竹黑克松</title>
 </head>
 <body>
     <div id="app"></div>
