--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- ```````````````````````````````    link     ``````````````````````````````` -->
     <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Quicksand" rel="stylesheet">
     <!-- ```````````````````````````````    script    ``````````````````````````````` -->
-    <title>2018梅竹黑客松</title>
+    <title>新竹 x 梅竹黑客松</title>
 </head>
 <body>
     <div id="app"></div>
